--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,23 @@
+* {
+   -ms-user-select: none; /* IE 10+ */
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   user-select: none;
+
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: transparent;
+}
+
+.selectable {
+   -ms-user-select: auto;
+   -moz-user-select: auto;
+   -khtml-user-select: auto;
+   -webkit-user-select: auto;
+   user-select: auto;
+}
+
+
 .keypad-container {
   display: flex;
   font-family: Helvetica;
