--- a/layout.css
+++ b/layout.css
@@ -7,6 +7,8 @@
 
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent;
+
+    touch-action: none;
 }
 
 .selectable {
@@ -66,20 +68,13 @@
   transition: all 0.3s;
 }
 
-.key:hover {
-	height: 75;
-	width: 75;
-	margin: 7.5;
-	transition:0s;
-}
-
 .key.active {
   background-color: #002e44;
   color: #FFFFFF;
   transition: 0s
 }
 
-.key:active {
+.key.touch-active {
   background-color: #006494;
   color: #FFFFFF;
   transition: 0s;
