Added key disable feature
- disable keys when schema doesn't have them
- remap enter key to dial
- added support to pulseDialer to dial tones for a specified length (hacky)

--- a/layout.css
+++ b/layout.css
@@ -80,6 +80,15 @@
   transition: 0s;
 }
 
+.key.disabled {
+  pointer-events: none;
+  border: 1px solid #FFFFFF;
+  background-color: #b5b5b5;
+  color: #FFFFFF;
+  transition: 0s;
+
+}
+
 .fullwidth {
 	width: 292px;
 }
